# science-algs

./: CMakeLists.txt  toolchain-mingw.cmake
src/: cnf.c  cnf.cpp  cnf.h  cnf.hpp  genetic_cnf.c  genetic_cnf.cpp  genetic_cnf.h  genetic_cnf.hpp  main.c  main.cpp  simulated_annealing_cnf.cpp  simulated_annealing_cnf.hpp  utils.c  utils.h
